--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.115.12",
+    "httpx>=0.28.1",
     "pandas>=2.2.3",
     "pre-commit>=4.2.0",
+    "pydantic-settings>=2.9.1",
+    "python-dotenv>=1.1.0",
+    "scikit-learn>=1.6.1",
     "xenon>=0.9.3",
 ]
